# hsad-intent-geval

./: .gitignore  250812_eval_set_sample.xlsx:Zone.Identifier  README.md  main.py  pyproject.toml
results/: evaluation_summary_20250724_164959.json  evaluation_summary_20250729_045533.json  evaluation_summary_20250729_063846.json
src/: geval.py
src/geval_framework/: data_model.py  llm_as_a_judge.py  metric_prompt.py
